backend/build_errors_3.txt
    Checking huynhtu-backend v0.1.0 (C:\Users\huyht\Downloads\huynhtu\backend)
error[E0277]: the trait bound `(): FromStr` is not satisfied
  --> src\routes\links.rs:41:38
   |
41 |             let req_url = target_url.parse().map_err(|_| worker::Error::from("Invalid target URL"))?;
   |                                      ^^^^^ the trait `FromStr` is not implemented for `()`
   |
   = help: the following other types implement trait `FromStr`:
             BigInt
             JsString
             Value
             bool
             char
             chrono::datetime::DateTime<chrono::offset::fixed::FixedOffset>
             chrono::datetime::DateTime<chrono::offset::utc::Utc>
             chrono::month::Month
           and 50 others
note: required by a bound in `core::str::<impl str>::parse`
  --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\str\mod.rs:2749:5

For more information about this error, try `rustc --explain E0277`.
error: could not compile `huynhtu-backend` (lib) due to 1 previous error
